--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">sageFemme</string>
+    <string name="app_name">Check-SF</string>
+    <string name="Check_SF">Check-SF</string>
 </resources>
